--- a/app/App.scss
+++ b/app/App.scss
@@ -25,20 +25,31 @@
   }
 }
 
-.itemicon {
-  color: $primary-color;
+.windowicon {
+  color: #001529;
   line-height: 64px;
   cursor: pointer;
   transition: color 0.3s;
+  margin-top: 5px;
+  margin-right: 5px;
+  &:hover {
+    color: $primary-color;
+  }
+}
+
+.windowiconspan {
+  line-height: 64px;
   margin-left: auto;
   margin-top: 5px;
 }
 
 .antmenu {
-  background-color: transparent;
+  background-color: transparent !important;
+  margin-top: 15px !important;
 }
 
 .header {
+  height: 80px !important;
   padding: 0;
   align-items: center;
   font-size: 20px;
@@ -54,6 +65,7 @@
   }
 }
 .header_light {
+  height: 80px !important;
   background: #fff !important;
   padding: 0;
   align-items: center;
@@ -84,7 +96,7 @@
 
 .headerlogo {
   height: 60px;
-  margin-bottom: 5px;
-  margin-left: -30px;
+  margin-bottom: 10px;
+  margin-left: -10px;
   margin-right: 70px;
 }
