--- a/app/App.scss
+++ b/app/App.scss
@@ -26,6 +26,7 @@
 }
 
 .windowicon {
+  -webkit-app-region: no-drag;
   color: #001529;
   line-height: 64px;
   cursor: pointer;
@@ -44,11 +45,13 @@
 }
 
 .antmenu {
+  -webkit-app-region: no-drag;
   background-color: transparent !important;
   margin-top: 15px !important;
 }
 
 .header {
+  -webkit-app-region: drag;
   height: 80px !important;
   padding: 0;
   align-items: center;
@@ -65,6 +68,7 @@
   }
 }
 .header_light {
+  -webkit-app-region: drag;
   height: 80px !important;
   background: #fff !important;
   padding: 0;
