completed billing page, fixed some bugs

--- a/app/components/Proxy.scss
+++ b/app/components/Proxy.scss
@@ -5,6 +5,20 @@
   font-size: 16px;
 }
 
+.startbutton {
+  background: green !important;
+  &:hover {
+    background: rgba(0, 150, 0, 0.9) !important;
+  }
+}
+
+.deletebutton {
+  color: red !important;
+  &:hover {
+    color: rgba(255, 0, 0, 0.5) !important;
+  }
+}
+
 .eyeball {
   font-size: 16px;
   margin-left: 10px;
