some update in UI(regulation margin and size in account table)

--- a/app/components/Account.scss
+++ b/app/components/Account.scss
@@ -69,10 +69,17 @@
 }
 
 .combo {
-  width: 150px;
-  margin-left: 10px;
+  width: 400px;
 }
 
 .editinput {
   width: 150px;
+}
+
+td {
+  padding: 10px 0px !important;
+}
+
+th {
+  padding: 10px 0px !important;
 }
