Added target test url for proxy test, UI customization, authentication and auto update

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,3 +1,6 @@
+@import "../configs/theme.scss";
+@import "../configs/config.scss";
+
 /*
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
@@ -20,8 +23,14 @@ body {
 }
 
 a {
-  color: blue;
-  opacity: 0.75;
+  color: white;
+  opacity: 1;
+  text-decoration: none;
+}
+
+a[disabled] {
+  color: white;
+  opacity: 0.5;
   text-decoration: none;
 }
 
@@ -51,4 +60,40 @@ a:hover {
     border-radius: 20px;
     background: #f5f5f5;
   }
+}
+
+.ant-table-body {
+  background: #161616 !important;
+  color: white;
+  overflow-y: auto !important;
+}
+
+.ant-layout {
+  background: $bg-color;
+}
+
+.ant-select {
+  color: black;
+}
+
+.ant-select-dropdown-menu-item {
+  color: black !important;
+}
+
+.ant-table-placeholder {
+  background: #161616;
+}
+
+.ant-empty-description {
+  color: white;
+}
+
+.ant-card-head {
+  background: #323232 !important;
+  color: white;
+}
+
+.ant-card-body {
+  background: $bg-color;
+  color: white;
 }
