--- a/app/App.scss
+++ b/app/App.scss
@@ -8,6 +8,8 @@
   z-index: 2;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
   font-weight: 500;
+  background: $bg-color !important;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .layout {
@@ -15,9 +17,10 @@
 }
 
 .trigger {
-  color: #001529;
+  color: white;
   line-height: 64px;
   margin-top: 5px;
+  margin-left: 20px;
   cursor: pointer;
   transition: color 0.3s;
   &:hover {
@@ -27,12 +30,12 @@
 
 .windowicon {
   -webkit-app-region: no-drag;
-  color: #001529;
+  color: white;
   line-height: 64px;
   cursor: pointer;
   transition: color 0.3s;
   margin-top: 5px;
-  margin-right: 5px;
+  margin-right: 15px;
   &:hover {
     color: $primary-color;
   }
@@ -42,12 +45,14 @@
   line-height: 64px;
   margin-left: auto;
   margin-top: 5px;
+  margin-right: 10px;
 }
 
 .antmenu {
   -webkit-app-region: no-drag;
   background-color: transparent !important;
   margin-top: 15px !important;
+  border: none;
 }
 
 .header {
@@ -70,11 +75,11 @@
 .header_light {
   -webkit-app-region: drag;
   height: 80px !important;
-  background: #fff !important;
+  background: $bg-color !important;
   padding: 0;
   align-items: center;
   font-size: 20px;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   display: flex;
   h1 {
     color: $primary-color;
@@ -101,6 +106,6 @@
 .headerlogo {
   height: 60px;
   margin-bottom: 10px;
-  margin-left: -10px;
+  margin-left: 40px;
   margin-right: 70px;
 }
