--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -63,7 +63,7 @@ a:hover {
 }
 
 .ant-table-body {
-  background: #161616 !important;
+  background: #2c2f33 !important;
   color: white;
   overflow-y: auto !important;
 }
@@ -81,7 +81,7 @@ a:hover {
 }
 
 .ant-table-placeholder {
-  background: #161616;
+  background: #2c2f33;
 }
 
 .ant-empty-description {
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .ant-card-head {
-  background: #323232 !important;
+  background: #2c2f33 !important;
   color: white;
 }
 
