--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -35,6 +35,7 @@ a[disabled] {
 }
 
 a:hover {
+  color: $primary-color;
   opacity: 1;
   text-decoration: none;
   cursor: pointer;
@@ -96,4 +97,8 @@ a:hover {
 .ant-card-body {
   background: $bg-color;
   color: white;
+}
+
+.ant-popover-message-title {
+  color: black;
 }
