--- a/app/App.scss
+++ b/app/App.scss
@@ -30,7 +30,7 @@
 
 .windowicon {
   -webkit-app-region: no-drag;
-  color: white;
+  color: #888;
   line-height: 64px;
   cursor: pointer;
   transition: color 0.3s;
