--- a/app/containers/AuthContainer.scss
+++ b/app/containers/AuthContainer.scss
@@ -19,7 +19,7 @@
     -webkit-app-region: drag;
     .windowicon {
       -webkit-app-region: no-drag;
-      color: white;
+      color: #888;
       line-height: 64px;
       cursor: pointer;
       transition: color 0.3s;
