--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -111,3 +111,7 @@ a:hover {
   background: $bg-color;
   border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.ant-notification-notice {
+  opacity: 0.8;
+}
